@@ -1,6 +1,3 @@
-- content_for :javascript_epilogue do
-  crm.date_select_popup("opportunity_closes_on");
-
 - fields_for(@opportunity) do |o|
   = o.hidden_field :user_id
   = o.hidden_field :access
