@@ -1,22 +1,30 @@
 id = dom_id(@lead)
 
-if params[:cancel].blank?                       # Called from leads list item...
-  if @previous                                    # Hide open [Convert Lead] form if any.
-    page[dom_id(@previous)].replace :partial => "lead", :collection => [ @previous ]
-  end
-  page.call "crm.highlight_off", id               # Disable onMouseOver for the list item.
-  page[id].replace_html :partial => "convert"     # Show [Convert Lead] form.
+if params[:cancel] == "true" # <----------------- Hide [Convert Lead]
 
-elsif params[:cancel] == "false"                # Called from title of the lead landing page...
-  page[:convert_lead].replace_html :partial => "convert"
-  page.call "crm.hide_form", :edit_lead,    "Edit #{@lead.full_name}"
-  page.call "crm.flip_form", :convert_lead, "Convert #{@lead.full_name}"
-
-# Hide [Convert Lead]
-else
-  if request.referer =~ /\/leads\/\w+/          # Called from title of the lead landing page...
+  if request.referer =~ /\/leads\/\w+/            # Called from title of the lead landing page...
     page.call "crm.flip_form", :convert_lead, "#{@lead.full_name}"
-  else                                          # Called from leads list item...
+  else                                            # Called from leads list item...
     page[id].replace :partial => "lead", :collection => [ @lead ]
   end
+
+else # <----------------------------------------  Show [Convert Lead] form.
+
+  if params[:cancel].blank?                       # Called from leads list item...
+    if @previous                                  # Hide open [Convert Lead] form if any.
+      page[dom_id(@previous)].replace :partial => "lead", :collection => [ @previous ]
+    end
+    page.call "crm.highlight_off", id             # Disable onMouseOver for the list item.
+    page[id].replace_html :partial => "convert"   # Show [Convert Lead] form.
+
+  elsif params[:cancel] == "false"                # Called from title of the lead landing page...
+    page[:convert_lead].replace_html :partial => "convert"
+    page.call "crm.hide_form", :edit_lead,    "Edit #{@lead.full_name}"
+    page.call "crm.flip_form", :convert_lead, "Convert #{@lead.full_name}"
+  end
+
+  page.call "crm.create_or_select_account", request.referer =~ /\/accounts\// || @account.id.blank?
+  page.call "crm.date_select_popup", "opportunity_closes_on"
+  page[:account_name].focus
+
 end
