@@ -1,20 +1,26 @@
-id = dom_id(@lead)
+if request.referer =~ /\/leads\/\w+/
+  id = :convert_lead
+else
+  id = dom_id(@lead)
+end
+
 if @lead.status == "converted"
-  if request.referer =~ /\/leads\/\w+/ # Lead landing page.
+  if id == :convert_lead # Lead landing page.
+    page[:sidebar].replace_html :partial => "sidebar_show"
+    page[:summary].visual_effect :shake, :duration => 0.4, :distance => 3
     page.call "crm.flip_form", :convert_lead, @lead.full_name
   else
     page[id].replace :partial => "lead", :collection => [ @lead ]
     page[id].visual_effect :highlight, :duration => 1.0
+    if request.referer =~ /\/leads$/
+      page[:sidebar].replace_html :partial => "sidebar_index"
+      page[:filters].visual_effect :shake, :duration => 0.4, :distance => 3
+    end
   end
-  if request.referer =~ /\/leads$/
-    page[:sidebar].replace_html :partial => "sidebar_index"
-    page[:filters].visual_effect :shake, :duration => 0.4, :distance => 3
-  elsif request.referer =~ /\/leads\/\w+/
-    page[:sidebar].replace_html :partial => "sidebar_show"
-    page[:summary].visual_effect :shake, :duration => 0.4, :distance => 3
-  end
-else
+else  
   page[id].replace_html :partial => "convert"
+  page.call "crm.create_or_select_account", request.referer =~ /\/accounts\// || @account.id.blank?
+  page.call "crm.date_select_popup", "opportunity_closes_on"
   page[id].visual_effect :shake, :duration => 0.25, :distance => 6
   page[:account_name].focus
 end
