@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Wed, Apr 1, 2009
+---------------------------------------------------------------------
+- Finished [Edit Lead] views and view specs.
+
 Tue, Mar 31, 2009
 ---------------------------------------------------------------------
 - More work on [Edit Lead] views and specs.
